a lot of changes

--- a/src/main/webapp/shop/i18n/cz.txt
+++ b/src/main/webapp/shop/i18n/cz.txt
@@ -11,6 +11,8 @@
 
 	"menu.article.soldOut.label": "Vyprodáno",
 	"menu.article.new.label": "Nové",
+	"menu.menuType.restaurantWeekly" : "Týdení Menu",
+	"menu.menuType.restaurantDaily" : "Denní nabídka",
 
 	"order.detail.customer": "Zákazník",
 	"order.detail.deliveryLocation": "Místo vyzvednutí",
