--- a/src/main/webapp/shop/i18n/en.txt
+++ b/src/main/webapp/shop/i18n/en.txt
@@ -11,6 +11,8 @@
 
 	"menu.article.soldOut.label": "Sold Out",
 	"menu.article.new.label": "New",
+	"menu.menuType.restaurantWeekly" : "Weekly Menu",
+	"menu.menuType.restaurantDaily" : "Daily Specials",
 
 	"order.detail.customer": "Customer",
 	"order.detail.deliveryLocation": "Delivery Location",
